v1.12.x/connectors/database/mysql/yaml.mdx
---
title: Run the MySQL Connector Externally
description: Configure MySQL ingestion using YAML to automate schema, column, and profiling data collection.
sidebarTitle: Run Externally
mode: "wide"
---
import { CodePreview, ContentPanel, ContentSection, CodePanel } from '/snippets/components/CodePreview.jsx'
import AutoClassification from '/snippets/connectors/yaml/auto-classification.mdx'
import DataProfiler from '/snippets/v1.12.x/connectors/yaml/data-profiler.mdx'
import Lineage from '/snippets/connectors/yaml/lineage.mdx'
import IngestionSinkDef from '/snippets/connectors/yaml/ingestion-sink-def.mdx'
import WorkflowConfigDef from '/snippets/connectors/yaml/workflow-config-def.mdx'
import IngestionCli from '/snippets/connectors/yaml/ingestion-cli.mdx'
import PythonRequirements from '/snippets/connectors/python-requirements.mdx'
import ExternalIngestionDeployment from '/snippets/v1.12.x/connectors/external-ingestion-deployment.mdx'
import IngestionSink from '/snippets/connectors/yaml/ingestion-sink.mdx'
import WorkflowConfig from '/snippets/connectors/yaml/workflow-config.mdx'
import SourceConfigDef from '/snippets/connectors/yaml/database/source-config-def.mdx'
import SourceConfig from '/snippets/connectors/yaml/database/source-config.mdx'
import DataQuality from '/snippets/connectors/yaml/data-quality.mdx'
import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'

<ConnectorDetailsHeader
icon='/public/images/connectors/sql.webp'
name="MySQL"
stage="PROD"
availableFeatures={["Metadata", "Data Profiler", "Data Quality", "dbt", "View Lineage", "View Column-level Lineage", "Query Usage", "Sample Data", "Auto-Classification", "Stored Procedures"]}
unavailableFeatures={["Owners", "Tags"]}
/>
In this section, we provide guides and references to use the MySQL connector.
Configure and schedule MySQL metadata and profiler workflows from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
- [Data Profiler](#data-profiler)
- [Lineage](#lineage)
- [Data Quality](#data-quality)
- [dbt Integration](#dbt-integration)
- [Enable Security](#securing-mysql-connection-with-ssl-in-openmetadata)

<ExternalIngestionDeployment />
## Requirements
### Python Requirements
<PythonRequirements />
To run the MySQL ingestion, you will need to install:
```bash
pip3 install "openmetadata-ingestion[mysql]"
```
### Metadata
Note that We support MySQL (version 8.0.42 or greater) and the user should have access to the `INFORMATION_SCHEMA` table.  By default a user can see only the rows in the `INFORMATION_SCHEMA` that correspond to objects for which the user has the proper access privileges.
```SQL
-- Create user. If <hostName> is omitted, defaults to '%'
-- More details https://dev.mysql.com/doc/refman/8.0/en/create-user.html
CREATE USER '<username>'[@'<hostName>'] IDENTIFIED BY '<password>';
-- Grant select on a database
GRANT SELECT ON world.* TO '<username>';
-- Grant select on a database
GRANT SELECT ON world.* TO '<username>';
-- Grant select on a specific object
GRANT SELECT ON world.hello TO '<username>';
```
### Lineage & Usage
To extract lineage & usage, enable query logging in MySQL. By default, OpenMetadata reads from `mysql.general_log`, so the connection user needs `SELECT` access on `mysql.general_log`. If you enable `useSlowLogs`, OpenMetadata reads from `mysql.slow_log` instead, so the same user needs `SELECT` access on `mysql.slow_log`.
```sql
-- Enable general logs (default log source)
SET GLOBAL general_log='ON';
SET GLOBAL log_output='table';
GRANT SELECT ON mysql.general_log TO '<username>'@'<host>';

-- Optional: if using `useSlowLogs: true`
SET GLOBAL slow_query_log='ON';
SET GLOBAL log_output='table';
GRANT SELECT ON mysql.slow_log TO '<username>'@'<host>';

-- Optional: if using a custom `queryHistoryTable` (e.g. audit_db.my_query_log)
GRANT SELECT ON <custom_db>.<custom_table> TO '<username>'@'<host>';
```
### 1. Define the YAML Config
This is a sample config for MySQL Lineage:
<Steps>
<Step title="Source Configuration - Source Config">
#### Source Configuration - Source Config
You can find all the definitions and types for the  `sourceConfig` [here](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/metadataIngestion/databaseServiceQueryLineagePipeline.json).
</Step>
<Step title="queryLogDuration">
**queryLogDuration**: Configuration to tune how far we want to look back in query logs to process lineage data in days.
</Step>
<Step title="parsingTimeoutLimit">
**parsingTimeoutLimit**: Configuration to set the timeout for parsing the query in seconds.
</Step>
<Step title="filterCondition">
**filterCondition**: Condition to filter the query history.
</Step>
<Step title="resultLimit">
**resultLimit**: Configuration to set the limit for query logs.
</Step>
<Step title="queryLogFilePath">
**queryLogFilePath**: Configuration to set the file path for query logs.
</Step>
<Step title="databaseFilterPattern">
**databaseFilterPattern**: Regex to only fetch databases that matches the pattern.
</Step>
<Step title="schemaFilterPattern">
**schemaFilterPattern**: Regex to only fetch tables or databases that matches the pattern.
</Step>
<Step title="tableFilterPattern">
**tableFilterPattern**: Regex to only fetch tables or databases that matches the pattern.
</Step>
<Step title="overrideViewLineage">
**overrideViewLineage**: Set the 'Override View Lineage' toggle to control whether to override the existing view lineage.
</Step>
<Step title="processViewLineage">
**processViewLineage**: Set the 'Process View Lineage' toggle to control whether to process view lineage.
</Step>
<Step title="processQueryLineage">
**processQueryLineage**: Set the 'Process Query Lineage' toggle to control whether to process query lineage.
</Step>
<Step title="processStoredProcedureLineage">
**processStoredProcedureLineage**: Set the 'Process Stored ProcedureLog Lineage' toggle to control whether to process stored procedure lineage.
</Step>
<Step title="queryHistoryTable">
**queryHistoryTable**: Optional. Specify a custom table to use as the query history source for usage and lineage extraction (e.g. `audit_db.my_query_log`). When set, this replaces the default `mysql.general_log` (or `mysql.slow_log` when `useSlowLogs: true`). The custom table must expose columns compatible with the chosen log format — `argument` and `event_time` when `useSlowLogs: false` (general log schema), or `sql_text` and `start_time` when `useSlowLogs: true` (slow log schema). The connection user needs `SELECT` on this table. This table is also used by the test connection probe when verifying connectivity.
</Step>
<Step title="threads">
**threads**: Number of Threads to use in order to parallelize lineage ingestion.
</Step>
<Step title="Sink Configuration">
#### Sink Configuration
To send the metadata to OpenMetadata, it needs to be specified as `type: metadata-rest`.
</Step>
<Step title="Workflow Configuration">
#### Workflow Configuration
The main property here is the `openMetadataServerConfig`, where you can define the host and security provider of your OpenMetadata installation.
For a simple, local installation using our docker containers, this looks like:
</Step>
</Steps>
- You can learn more about how to configure and run the Lineage Workflow to extract Lineage data from [here](/v1.12.x/connectors/ingestion/workflows/lineage)
### Profiler & Data Quality
Executing the profiler workflow or data quality tests, will require the user to have `SELECT` permission on the tables/schemas where the profiler/tests will be executed. More information on the profiler workflow setup can be found [here](/v1.12.x/how-to-guides/data-quality-observability/profiler/profiler-workflow) and data quality tests [here](/v1.12.x/how-to-guides/data-quality-observability/quality).
## Metadata Ingestion
All connectors are defined as JSON Schemas.
[Here](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/entity/services/connections/database/mysqlConnection.json)
you can find the structure to create a connection to MySQL.
In order to create and run a Metadata Ingestion workflow, we will follow
the steps to create a YAML configuration able to connect to the source,
process the Entities if needed, and reach the OpenMetadata server.
The workflow is modeled around the following
[JSON Schema](https://github.com/open-metadata/OpenMetadata/blob/main/openmetadata-spec/src/main/resources/json/schema/metadataIngestion/workflow.json)
### 1. Define the YAML Config

This is a sample config for MySQL:

<CodePreview>

<ContentPanel>

<ContentSection id={1} title="Source Configuration" lines="1-3">

Configure the source type and service name for your MySQL connector.

</ContentSection>

<ContentSection id={2} title="Username" lines="7">

**username**: Specify the User to connect to MySQL. It should have enough privileges to read all the metadata.

</ContentSection>

<ContentSection id={3} title="Basic Auth" lines="8-9">

**authType**: Choose from basic auth, IAM based auth, and Azure auth.

#### Basic Auth

**password**: Password comes under Basic Auth type.

</ContentSection>

<ContentSection id={4} title="IAM Based Auth" lines="10-14">

#### IAM BASED Auth

- **awsAccessKeyId** & **awsSecretAccessKey**: When you interact with AWS, you specify your AWS security credentials to verify who you are and whether you have permission to access the resources that you are requesting. AWS uses the security credentials to authenticate and authorize your requests ([docs](https://docs.aws.amazon.com/IAM/latest/UserGuide/security-creds.html)).

Access keys consist of two parts: An **access key ID** (for example, `AKIAIOSFODNN7EXAMPLE`), and a **secret access key** (for example, `wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY`).

You must use both the access key ID and secret access key together to authenticate your requests.

You can find further information on how to manage your access keys [here](https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html).

**awsSessionToken**: If you are using temporary credentials to access your services, you will need to inform the AWS Access Key ID and AWS Secrets Access Key. Also, these will include an AWS Session Token.

**awsRegion**: Each AWS Region is a separate geographic area in which AWS clusters data centers ([docs](https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/Concepts.RegionsAndAvailabilityZones.html)).

As AWS can have instances in multiple regions, we need to know the region the service you want reach belongs to.

Note that the AWS Region is the only required parameter when configuring a connection. When connecting to the services programmatically, there are different ways in which we can extract and use the rest of AWS configurations.

You can find further information about configuring your credentials [here](https://boto3.amazonaws.com/v1/documentation/api/latest/guide/credentials.html#configuring-credentials).

**endPointURL**: To connect programmatically to an AWS service, you use an endpoint. An *endpoint* is the URL of the entry point for an AWS web service. The AWS SDKs and the AWS Command Line Interface (AWS CLI) automatically use the default endpoint for each service in an AWS Region. But you can specify an alternate endpoint for your API requests.

Find more information on [AWS service endpoints](https://docs.aws.amazon.com/general/latest/gr/rande.html).

**profileName**: A named profile is a collection of settings and credentials that you can apply to a AWS CLI command.

When you specify a profile to run a command, the settings and credentials are used to run that command.

Multiple named profiles can be stored in the config and credentials files.

You can inform this field if you'd like to use a profile other than `default`.

Find here more information about [Named profiles for the AWS CLI](https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-profiles.html).

**assumeRoleArn**: Typically, you use `AssumeRole` within your account or for cross-account access. In this field you'll set the `ARN` (Amazon Resource Name) of the policy of the other account.

A user who wants to access a role in a different account must also have permissions that are delegated from the account administrator. The administrator must attach a policy that allows the user to call `AssumeRole` for the `ARN` of the role in the other account.

This is a required field if you'd like to `AssumeRole`.

Find more information on [AssumeRole](https://docs.aws.amazon.com/STS/latest/APIReference/API_AssumeRole.html).

<Tip>
When using Assume Role authentication, ensure you provide the following details:
- **AWS Region**: Specify the AWS region for your deployment.
- **Assume Role ARN**: Provide the ARN of the role in your AWS account that OpenMetadata will assume.
</Tip>

**assumeRoleSessionName**: An identifier for the assumed role session. Use the role session name to uniquely identify a session when the same role is assumed by different principals or for different reasons.

By default, we'll use the name `OpenMetadataSession`.

Find more information about the [Role Session Name](https://docs.aws.amazon.com/STS/latest/APIReference/API_AssumeRole.html#:~:text=An%20identifier%20for%20the%20assumed%20role%20session.).

**assumeRoleSourceIdentity**: The source identity specified by the principal that is calling the `AssumeRole` operation. You can use source identity information in AWS CloudTrail logs to determine who took actions with a role.

Find more information about [Source Identity](https://docs.aws.amazon.com/STS/latest/APIReference/API_AssumeRole.html#:~:text=Required%3A%20No-,SourceIdentity,-The%20source%20identity).

</ContentSection>

<ContentSection id={5} title="Azure Auth" lines="15-20">

- **scopes**: Required. Provide the scope or comma-separated scopes used to fetch the Azure access token, for example `https://ossrdbms-aad.database.windows.net/.default`.

- **clientId**, **clientSecret**, and **tenantId**: Optional when using a service principal. If omitted, OpenMetadata falls back to `DefaultAzureCredential` from the runtime environment.

- **accountName** and **vaultName**: Part of the shared Azure credentials schema, but not required for MySQL token-based authentication.

</ContentSection>

<ContentSection id={6} title="Host and Port" lines="21">

**Host and Port**: Enter the fully qualified hostname and port number for your MySQL deployment in the Host and Port field.

</ContentSection>

<ContentSection id={7} title="Database Schema" lines="22-23">

**databaseSchema**: databaseSchema of the data source. This is optional parameter, if you would like to restrict the metadata reading to a single databaseSchema. When left blank, OpenMetadata Ingestion attempts to scan all the databaseSchema.

</ContentSection>

<ContentSection id={7.1} title="useSlowLogs" lines="24">

**useSlowLogs**: When set to `true`, OpenMetadata reads query history from `mysql.slow_log` instead of the default `mysql.general_log`. Requires slow query logging to be enabled on the MySQL server (`SET GLOBAL slow_query_log='ON'`).

</ContentSection>

<ContentSection id={7.2} title="queryHistoryTable" lines="25">

**queryHistoryTable**: Optional. Specify a fully qualified custom table (`<db>.<table>`) to use as the query history source for usage and lineage extraction. If set, this replaces the default `mysql.general_log` (or `mysql.slow_log` when `useSlowLogs: true`).<br/><br/>

The custom table must expose columns compatible with the selected log format:

- **General log**: `argument`, `event_time`
- **Slow log**: `sql_text`, `start_time`

The connection user requires `SELECT` on this table.

</ContentSection>

<ContentSection id={8} title="Connection Options" lines="26-27">

#### Advanced Configuration

**Connection Options (Optional)**: Enter the details for any additional connection options that can be sent to database during the connection. These details must be added as Key-Value pairs.

</ContentSection>

<ContentSection id={9} title="Connection Arguments" lines="28-29">

**Connection Arguments (Optional)**: Enter the details for any additional connection arguments such as security or protocol configs that can be sent to database during the connection. These details must be added as Key-Value pairs.

- In case you are using Single-Sign-On (SSO) for authentication, add the `authenticator` details in the Connection Arguments as a Key-Value pair as follows: `"authenticator" : "sso_login_url"`

</ContentSection>

<ContentSection id={10} title="Source Config" lines="30-73">

<SourceConfigDef />

</ContentSection>

<ContentSection id={11} title="Sink Configuration" lines="74-76">

<IngestionSinkDef />

</ContentSection>

<ContentSection id={12} title="Workflow Configuration" lines="77-93">

<WorkflowConfigDef />

</ContentSection>

</ContentPanel>

<CodePanel fileName="mysql_config.yaml">

```yaml
source:
  type: mysql
  serviceName: <service name>
  serviceConnection:
    config:
      type: Mysql
      username: <username>  # REQUIRED
      authType:
        password: <password>  # Basic Auth - most common
      # authType:
      #   awsConfig:  # IAM Auth for AWS RDS MySQL
      #     awsAccessKeyId: access key id
      #     awsSecretAccessKey: access secret key
      #     awsRegion: aws region name
      # authType:
      #   azureConfig:  # Azure AD / Entra auth for Azure Database for MySQL
      #     scopes: https://ossrdbms-aad.database.windows.net/.default
      #     clientId: your-client-id
      #     clientSecret: your-client-secret
      #     tenantId: your-tenant-id
      hostPort: <hostPort>  # REQUIRED - format: host:port
      databaseSchema: schema  # Optional: restrict to single schema
      databaseName: database_name  # Optional: custom name in OpenMetadata
      useSlowLogs: false  # Optional: use slow logs for lineage (default: false)
      # queryHistoryTable: audit_db.my_query_log  # Optional: custom query history table
      # connectionOptions:
      #   key: value
      # connectionArguments:
      #   key: value
```

<SourceConfig />

<IngestionSink />

<WorkflowConfig />

</CodePanel>

</CodePreview>

<IngestionCli />
<Lineage connector="mysql" />
<DataProfiler connector="mysql" />
<AutoClassification connector="mysql" />
<DataQuality />
## Securing MySQL Connection with SSL in OpenMetadata
To establish secure connections between OpenMetadata and MySQL, navigate to the Advanced Config section. Here, you can provide the CA certificate used for SSL validation by specifying the `caCertificate`.  Alternatively, if both client and server require mutual authentication, you'll need to use all three parameters: `ssl_key`, `ssl_cert`, and `ssl_ca`. In this case, `ssl_cert` is used for the client’s SSL certificate, `ssl_key` for the private key associated with the SSL certificate, and `ssl_ca` for the CA certificate to validate the server’s certificate.
```yaml
      sslConfig:
            caCertificate: "/path/to/ca_certificate"
            sslCertificate: "/path/to/your/ssl_cert"
            sslKey: "/path/to/your/ssl_key"
```
## dbt Integration
<Columns cols={2}>
<Card title="dbt Integration" href="/v1.12.x/connectors/database/dbt">
  Learn more about how to ingest dbt models
</Card>
</Columns>
